# secforge

./: .gitignore  README.md  pyproject.toml
secforge/cli/: config_cmd.py  diff_cmd.py  main.py  scan.py
secforge/core/: ai_triage.py  client.py  config.py  html_report.py  reporter.py  scope.py  scope_file.py
secforge/models/: __init__.py  enums.py  evidence.py  finding.py  target.py
secforge/plugins/: __init__.py  base.py
secforge/plugins/graphql/: scanner.py
secforge/plugins/rest/: apikey.py  auth.py  bfla.py  bola.py  business_logic.py  cors.py  headers.py  injection.py  inventory.py  jwt.py  mass_assignment.py  misconfiguration.py  oauth2.py  rate_limit.py  sensitive_data.py  ssrf.py  tls.py  unsafe_consumption.py
targets/: example.yaml
tests/: test_apikey.py  test_cors.py  test_graphql.py  test_headers.py  test_jwt.py  test_new_plugins.py  test_phase6_plugins.py  test_rate_limit.py  test_ssrf.py
